--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       id="MathJax-script"
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-    ></script
+    ></script>
   </body>
 </html>
